[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-cubrid"
version = "1.3.0"
description = "CUBRID dialect for SQLAlchemy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Yeongseon Choe", email = "yeongseon.choe@gmail.com"},
    {name = "Gyeongjun Paik", email = "paikend@gmail.com"},
]
keywords = ["SQLAlchemy", "CUBRID", "dialect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "sqlalchemy>=2.0,<2.2",
]

[project.optional-dependencies]
cubrid = [
    "CUBRID-Python",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "ruff==0.15.8",
    "mypy==1.19.1",
    "bandit[toml]==1.9.4",
    "pre-commit",
    "tox",
    "alembic>=1.7",
]
alembic = [
    "alembic>=1.7",
]
pycubrid = [
    "pycubrid>=1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/cubrid-labs/sqlalchemy-cubrid"
Repository = "https://github.com/cubrid-labs/sqlalchemy-cubrid"
Documentation = "https://github.com/cubrid-labs/sqlalchemy-cubrid/tree/main/docs"
Changelog = "https://github.com/cubrid-labs/sqlalchemy-cubrid/blob/main/CHANGELOG.md"
Issues = "https://github.com/cubrid-labs/sqlalchemy-cubrid/issues"

[project.entry-points."sqlalchemy.dialects"]
cubrid = "sqlalchemy_cubrid.dialect:CubridDialect"
"cubrid.cubrid" = "sqlalchemy_cubrid.dialect:CubridDialect"
"cubrid.pycubrid" = "sqlalchemy_cubrid.pycubrid_dialect:PyCubridDialect"
"cubrid.aiopycubrid" = "sqlalchemy_cubrid.aio_pycubrid_dialect:PyCubridAsyncDialect"

[project.entry-points."alembic.ddl"]
cubrid = "sqlalchemy_cubrid.alembic_impl:CubridImpl"

[tool.setuptools]
packages = ["sqlalchemy_cubrid"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_cubrid"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "test.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["test"]
skips = ["B101"]

[tool.coverage.run]
source = ["sqlalchemy_cubrid"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--tb native -v -r fxX --maxfail=25 -p no:warnings"
python_files = "test/*test_*.py"
